--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 				<h1>Anmeldung</h1>
 			</div>
 			<div data-role="content">
-				<p>Page content goes here.</p>
+				<p>Page content goes here!</p>
 			</div>
 		</div>
     </body>
