Index.html geändert

--- a/www/index.html
+++ b/www/index.html
@@ -52,5 +52,14 @@
 				</div>
 			</div>
 		</div>
+<!-- BEGINN NEUE PAGE -->				
+				<h1>Willkommen</h1>
+			</div>
+			<div data-role="content">
+				<p>Der Login war erfolgreich!</p>
+				
+			</div>
+			
+		</div>
 	</body>
 </html>
