HTML Seiten angelegt. JH

--- a/www/abholeranzahl.html
+++ b/www/abholeranzahl.html
@@ -15,13 +15,14 @@
 <!-- HIER BEGINNT DAS SIDE MENU -->
 		<div data-role="panel" id="panel-1">
 			<ul data-role="listview" id="listview-1">
-				<li><a href="#page-1">Abholungsantwort verfassen</a></li>
-				<li><a href="#page-2">Abholerliste</a></li>
-				<li><a href="#page-3">Problemmeldung verfassen</a></li>
-				<li><a href="#page-4">Problemmeldungen</a></li>
-				<li><a href="#page 5">Abholeranzahl anzeigen</a></li>
-				<li><a href="#page-6">Datenblaetter</a></li>
-				<li><a href="#page-7">Verlinkungen</a></li>
+				<li><a href="http://localhost:64598/abholungsantwort.html">Abholungsantwort verfassen</a></li>
+				<li><a href="http://localhost:64598/abholerliste.html">Abholerliste</a></li>
+				<li><a href="http://localhost:64598/problemmeldung_mit_koordination.html">Problemmeldung mit Koordination verfassen</a></li>
+				<li><a href="http://localhost:64598/problemmeldung_ohne_koordination.html">Problemmeldung ohne Koordination verfassen</a></li>
+				<li><a href="http://localhost:64598/problemmeldungen.html">Problemmeldungen </a></li>
+				<li><a href="http://localhost:64598/abholeranzahl.html">Abholeranzahl anzeigen</a></li>
+				<li><a href="http://localhost:64598/datenblaetter.html">Datenblaetter</a></li>
+				<li><a href="http://localhost:64598/verlinkungen.html">Verlinkungen</a></li>
 			</ul>
 		</div>
 		<div data-role="page" id="page-1">
