--- a/www/datenblaetter.html
+++ b/www/datenblaetter.html
@@ -32,7 +32,7 @@
 			<div data-role="header">
 <!-- MENU BUTTON FUER JEDE PAGE -->
 				<a href="#panel-1" id="button-1" class="ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all">Menu</a>
-				</b><h1>Anmeldung</h1>
+				</b><h1>Datenblaetter</h1>
 			</div>
 <!-- Hier beginnt der Content -->
 			<div data-role="content">
