--- a/www/index.html
+++ b/www/index.html
@@ -15,13 +15,13 @@
 <!-- HIER BEGINNT DAS SIDE MENU -->
 		<div data-role="panel" id="panel-1">
 			<ul data-role="listview" id="listview-1">
-				<li><a href="#page-1">Abholungsantwort verfassen</a></li>
-				<li><a href="#page-2">Abholerliste</a></li>
-				<li><a href="#page-3">Problemmeldung verfassen</a></li>
-				<li><a href="#page-4">Problemmeldungen</a></li>
-				<li><a href="#page 5">Abholeranzahl anzeigen</a></li>
-				<li><a href="#page-6">Datenblaetter</a></li>
-				<li><a href="#page-7">Verlinkungen</a></li>
+				<li><a href="abholungsantwort.html">Abholungsantwort verfassen</a></li>
+				<li><a href="abholerliste.html">Abholerliste</a></li>
+				<li><a href="problemmeldung_auswahl.html">Problemmeldung verfassen</a></li>
+				<li><a href="problemmeldungen.html">Problemmeldungen</a></li>
+				<li><a href="abholeranzahl.html">Abholeranzahl anzeigen</a></li>
+				<li><a href="datenblaetter.html">Datenbl&auml;tter</a></li>
+				<li><a href="verlinkungen.html">Verlinkungen</a></li>
 			</ul>
 		</div>
 		<div data-role="page" id="page-1">
@@ -47,29 +47,10 @@
 <!-- Hier beginnt der Footer -->			
 			<div data-role="footer" id="footer-1" data-position="fixed" data-fullscreen="true" class="ui-bar">
 				<div data-role="controlgroup" data-type="horizontal" class="ui-mini">
-					<a href="#panel-1" id="buttonBeenden" class="ui-btn">Beenden</a>
-					<a href="#panel-1" id="buttonAnmelden" class="ui-btn" >Anmelden</a>
+					<a href="" id="buttonBeenden" class="ui-btn">Beenden</a>
+					<a href="willkommen.html" id="buttonAnmelden" class="ui-btn" >Anmelden</a>
 				</div>
 			</div>
 		</div>
-<!-- BEGINN NEUE PAGE -->				
-				<h1>Willkommen</h1>
-			</div>
-			<div data-role="content">
-				<p>Der Login war erfolgreich!</p>
-				<p>Das Menü ist oben links erreichbar.</p>
-			</div>
-		</div>
-	</body>
-	 <body>
-        <div class="app">
-            <h1>Solawi</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Verbinde zum Gerät</p>
-                <p class="event received">Gerät ist bereit</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
