--- a/www/willkommen.html
+++ b/www/willkommen.html
@@ -31,11 +31,19 @@
 			<div data-role="header">
 <!-- MENU BUTTON FUER JEDE PAGE -->
 				<a href="#panel-1" id="button-1" class="ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all">Men&uuml;</a>
-				</b><h1>Datenbl&auml;tter</h1>
+				</b><h1>Willkommen</h1>
 			</div>
+		</div>
 <!-- Hier beginnt der Content -->
-
-
-
-    </body>
+			<div data-role="content">
+				</b><h1>Willkommen in der SoLaWi-App!</h1>
+				<p>Der Login war erfolgreich!</p>
+				<p>Das Men&uuml; ist oben links erreichbar.</p>
+			</div>
+			<div>
+				<img src="img/Solawi-Logo.jpg" width="300" height="150" alt="Solawi Logo">
+			
+			</div>
+		</div>
+	</body>
 </html>
