--- a/www/problemmeldung_auswahl.html
+++ b/www/problemmeldung_auswahl.html
@@ -31,11 +31,12 @@
 			<div data-role="header">
 <!-- MENU BUTTON FUER JEDE PAGE -->
 				<a href="#panel-1" id="button-1" class="ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all">Men&uuml;</a>
-				</b><h1>Datenbl&auml;tter</h1>
+				</b><h1>Auswahl Problemmeldung</h1>
 			</div>
 <!-- Hier beginnt der Content -->
-
-
-
+		<div>
+			<a href="problemmeldung_ohne_koordination.html" id="button-2" class="ui-btn ui-corner-all">Problemmeldung ohne Koordination</a>
+			<a href="problemmeldung_mit_koordination.html" id="button-2" class="ui-btn ui-corner-all">Problemmeldung mit Koordination</a>
+		</div>
     </body>
 </html>
