--- a/www/abholeranzahl.html
+++ b/www/abholeranzahl.html
@@ -31,11 +31,33 @@
 			<div data-role="header">
 <!-- MENU BUTTON FUER JEDE PAGE -->
 				<a href="#panel-1" id="button-1" class="ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all">Men&uuml;</a>
-				</b><h1>Abholeranzahl</h1>
+				<h1>Abholeranzahl</h1>
 			</div>
 <!-- Hier beginnt der Content -->
-
-
+<form>
+	<input data-type="search" id="searchForTable-1"/>
+</form>
+<table data-role="table" id="table-abholeranzahl" data-mode="columntoggle" data-filter="true" data-input="#searchForTable-1" class="ui-body-a ui-responsive table-stripe">
+	<thead>
+		<tr class="ui-bar-a">
+			<th>Datum</th>
+			<th data-priority="1">Abholort</th>
+			<th data-priority="2">Anzahl Abholer</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>24.12.2017</td>
+			<td>Dalborn</td>
+			<td>4</td>
+		</tr>
+		<tr>
+			<td>24.12.2017</td>
+			<td>Osnabrück</td>
+			<td>10000</td>
+		</tr>
+	</tbody>
+</table>
 
     </body>
 </html>
