Ich habe an zwei HTML pages gearbeitet.
JH 20171206

--- a/www/abholerliste.html
+++ b/www/abholerliste.html
@@ -50,7 +50,7 @@
 			<td>Dennis Bringt0</td>
 		</tr>
 		<tr>
-			<td>Jona Braucht1</td>
+			<td>Jona Braucht mehr mehr mehr</td>
 			<td>Dennis Bringt1</td>
 		</tr>
 		<tr>
